--- a/DealDouble.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/DealDouble.Web/Views/Shared/_DashboardLayout.cshtml
@@ -13,6 +13,7 @@
     <script src="~/Content/vendor/jquery/jquery.min.js"></script>
     <script src="~/Content/vendor/jquery/jquery.validate.min.js"></script>
     <link href="~/Content/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <script src="~/Content/vendor/sweetalert/sweetalert.min.js"></script>
 </head>
 <body>
     <div class="d-flex" id="wrapper">
