--- a/DealDouble.Web/Views/Home/Index.cshtml
+++ b/DealDouble.Web/Views/Home/Index.cshtml
@@ -6,32 +6,39 @@
 <div class="row">
     <div class="col-lg-12">
         <!--Slider Start-->
-        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                    <img class="d-block img-fluid" src="http://placehold.it/1110x350" alt="First slide">
+        @if (Model.SliderImages != null && Model.SliderImages.Count > 0)
+        {
+            var i = 0;
+            var firstSlider = Model.SliderImages.First();
+            <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    @foreach (var data in Model.SliderImages)
+                    {
+                        var active = data == firstSlider ? "active" : string.Empty;
+                        <li data-target="#carouselExampleIndicators" data-slide-to="@i" class="@active"></li>
+                        i++;
+                    }
+
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    @foreach (var data in Model.SliderImages)
+                    {
+                        var active = data == firstSlider ? "active" : string.Empty;
+                        <div class="carousel-item @active">
+                            <img class="d-block img-fluid" src="/Content/images/@data.ImageName" alt="First slide">
+                        </div>
+                    }                  
                 </div>
-                <div class="carousel-item">
-                    <img class="d-block img-fluid" src="http://placehold.it/1110x350" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block img-fluid" src="http://placehold.it/1110x350" alt="Third slide">
-                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
+        }
         <!--Slider End-->
 
         <div class="row">
@@ -44,7 +51,7 @@
                             {
                                 <option data-url="#" value="@category.ID">
                                     @category.Name
-                            </option>
+                                </option>
                             }
                         </select>
                     </div>
