--- a/DealDouble.Web/Views/Category/Index.cshtml
+++ b/DealDouble.Web/Views/Category/Index.cshtml
@@ -1,18 +1,47 @@
 ﻿@model DealDouble.Web.ViewModels.CategoryList
 @{
     ViewBag.Title = Model.PageTitle;
-    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
+    if (!Request.IsAjaxRequest())
+    {
+        Layout = "~/Views/Shared/_DashboardLayout.cshtml";
+    }
+
 }
 <div class="row">
 
     <div id="listingArea" class="col-lg-12">
         <div class="col-md-12 mt-2">
+            <h4 class="font-weight-bold float-left">@ViewBag.Title</h4>
+            <br />
+            <hr />
 
-            <h2 class="font-weight-bold float-left">@ViewBag.Title</h2>
-            <button id="createCateogory" class="btn btn-sm btn-success float-right mt-1" data-toggle="modal" data-target="#auctionCreateFrom"><i class="fa fa-plus"></i>Crate New Category</button>
         </div>
+        <div class="row">        
+            <div class="input-group col-md-8">
+                <select name="pageSize" class="form-control" id="pageSize">
+                    <option value="10">10</option>
+                    <option value="20">20</option>
+                    <option value="30">30</option>
+                    <option value="50">50</option>
+                    <option value="100">100</option>
+                </select>
+                <input class="form-control py-2" type="search" id="searchText" placeholder="Please search by Name" value="@Model.SearchTearm">
+                <span class="input-group-append">
+                    <button class="btn btn-outline-secondary" id="btnSearch" type="button">
+                        <i class="fa fa-search"></i>
+                    </button>
+                    <button class="btn btn-outline-secondary" id="resetBtn" type="button">
+                        <i class="fa fa-refresh"></i>
+                    </button>
+                    <button id="createCateogory" class="btn btn-outline-secondary" data-toggle="modal" data-target="#auctionCreateFrom"><i class="fa fa-plus"></i> New </button>
+                </span>
+                
+            </div>       
+        </div>
+            
+        
         <table class="table  table-striped table-hover mt-3">
-            <thead class="bg-info">
+            <thead class="bg-success">
                 <tr>
                     <th>Name</th>
                     <th>Description</th>
@@ -28,15 +57,85 @@
                         <td>@data.Description</td>
                         <td>@data.Auctions.Count()</td>
                         <td>
-                            <button class="editButton btn btn-sm btn-primary" data-id="@data.ID" data-toggle="modal" data-target="#categoryCreateFrom"> Edit </button>
-                            <button class="deleteButton btn btn-sm btn-danger" data-id="@data.ID"> Delete </button>
+                            <button class="editButton btn btn-sm btn-primary" data-id="@data.ID" data-toggle="modal" data-target="#categoryCreateFrom"><i class="fa fa-edit"></i></button>
+                            <button class="deleteButton btn btn-sm btn-danger" data-id="@data.ID"><i class="fa fa-trash"></i></button>
                         </td>
 
                     </tr>
                 }
             </tbody>
         </table>
-        <script>      
+
+        <div class="row">
+            <div class="offset-4">
+
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        @if (Model.Pager != null)
+                        {
+                            if (Model.Pager.CurrentPage > 1)
+                            {
+                                <li class="page-item">
+                                    <a class="page-link datalink" data-href="@Url.Action("Index", "Auction", new { pageNo = Model.Pager.CurrentPage - 1, pageSize = Model.PageSize })" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li>
+                            }
+                            for (var page = Model.Pager.StartPage; page <= Model.Pager.EndPage; page++)
+                            {
+                                var activeClass = Model.Pager.CurrentPage == page ? "active bg-info" : string.Empty;
+                                <li class="page-item @activeClass"><a class="page-link datalink" data-href="@Url.Action("Index","Auction",new {pageNo = page, pageSize = Model.PageSize })">@page</a></li>
+                            }
+                            if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
+                            {
+                                <li class="page-item">
+                                    <a class="page-link datalink" data-href="@Url.Action("Index", "Auction", new { pageNo = Model.Pager.CurrentPage + 1, pageSize = Model.PageSize })" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            }
+                        }
+
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <script>
+            $('#pageSize').change(function () {
+                var pageSize = $(this).val();
+               $.ajax({
+                    method: 'Get',
+                    url: '@Url.Action("Index","Category")',
+                    data: { searchTearm: '@Model.SearchTearm', pageSize:pageSize, pageNo:'@Model.PageNo' }
+                }).done(function (response) {
+                    window.setTimeout(function () {
+                        $('#listingArea').html(response);
+                        $("#pageSize option[selected]").removeAttr("selected");
+                        $("#pageSize option[value=" + @Model.PageSize + "]").attr("selected", "selected");
+                    }, 200)
+                   
+
+                }).fail(function (xhr, ajaxOptions, thrownError) {
+                    alert(xhr.status);
+                    console(thrownError);
+                })
+            })
+
+            $("#btnSearch").click(function () {
+                var searchText = $("#searchText").val();
+                $.ajax({
+                    method: 'Get',
+                    url: '@Url.Action("Index","Category")',
+                    data: { searchTearm: searchText, pageSize:'@Model.PageSize', pageNo:'@Model.PageNo' }
+                }).done(function (response) {
+                    window.setTimeout(function () {
+                        $('#listingArea').html(response);
+                    },200)
+                }).fail(function (xhr, ajaxOptions, thrownError) {
+                    alert(xhr.status);
+                    console(thrownError);
+                })
+            })
       $("#createCateogory").click(function () {
         $.ajax({
             metod: "Get",
